--- a/README
+++ b/README
@@ -115,8 +115,11 @@ impl bevy::app::Plugin for RocColorPickerPlugin {
 
 # Compiling
 The order is important here!
+
  1. glue.sh - generates glue files (rust source) that enables calling roc code from rust, and exposes roc datastructures to rust
- 2. bundle.sh - bundles the platform code (do we even need it?)
+ 	Note - glue is currently broken, so do not use it
  2. build_game.sh - builds the bevy game (this will need roc glue but not the plugin)
  3. build_plugin.sh - builds the platform & the roc plugin into a shared library
+ 4. cd plugin_wrapper && cargo build - builds the plugin wrapper that provides a nice FFI instead of the unsafe abomination that roc exposes by default
+   Note: plugin_wrapper is WIP
 
